--- a/templates/monitor.ldif.j2
+++ b/templates/monitor.ldif.j2
@@ -1,5 +1,6 @@
+{% if ansible_os_family == "RedHat" %}
 dn: olcDatabase={1}monitor,cn=config
 changetype: modify
 replace: olcAccess
 olcAccess: {0}to * by dn.base="gidNumber=0+uidNumber=0,cn=peercred,cn=external,cn=auth" read by dn.base="cn={{ldap_admin_id}},{{dc_string}}" read by * none
-
+{% endif %}
